--- a/public_html/package.json
+++ b/public_html/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "assert": "^2.0.0",
+    "babel-cli": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.3",
     "nodemon": "^2.0.2",
-    "babel-cli": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
     "rimraf": "^2.6.1"
-
   },
   "license": "MIT"
 }
